--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ h2, p {
   box-shadow: inset -2px 2px 4px 2px rgba(40, 40, 40, 0.6);
 }
 
+img {
+  user-select: none;
+}
+
 .gallery {
   position: relative;
   width: 768px;
@@ -108,9 +112,9 @@ h2, p {
 }
 
 .small:hover {
-  outline: 5px solid #ffce00;
+  outline: 5px solid #ffdb4d;
 }
 
-/*#active {
-  outline: 5px solid #ffdb4d;
-}*/
+#active {
+  outline: 5px solid #ffce00;
+}
