--- a/style.css
+++ b/style.css
@@ -100,8 +100,9 @@ img {
   width: 82px;
   height: 82px;
   margin: auto 5px;
-  background: linear-gradient(#999, #ccc);
+  background: #bbb;
   box-shadow: 0px 5px 4px 2px rgba(40, 40, 40, 0.6);
+  transition: 0.5s;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -109,7 +110,7 @@ img {
 }
 
 .list:hover {
-  background: linear-gradient(#ccc, #999);
+  background: #777;
 }
 
 .small {
@@ -121,8 +122,4 @@ img {
 
 #active {
   background: linear-gradient(#ffce00, #ffeb99);
-}
-
-#active:hover {
-  background: linear-gradient(#ffeb99, #ffce00);
 }
