--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ img {
 
 .gallery {
   position: relative;
-  background: blue;
 }
 
 .large {
@@ -100,9 +99,8 @@ img {
   width: 82px;
   height: 82px;
   margin: auto 5px;
-  background: #bbb;
+  background: linear-gradient(#999, #ccc);
   box-shadow: 0px 5px 4px 2px rgba(40, 40, 40, 0.6);
-  transition: 0.5s;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -110,7 +108,7 @@ img {
 }
 
 .list:hover {
-  background: #777;
+  background: linear-gradient(#ccc, #999);
 }
 
 .small {
